Chore: added config for blog layout

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,10 @@
 sass:
   sass_dir:          _scss
   style:            :compressed
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
