Feat: added meta tags and favicon

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,5 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+title: "Le conseil en droit social sur-mesure - HOGO Avocats"
+meta-desc: "HOGO est une société d’avocats exclusivement dédiée à l’accompagnement des entreprises & associations en droit du travail et droit de la sécurité sociale."
