--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,18 @@ defaults:
       layout: "infographic"
 title: "Le conseil en droit social sur-mesure - HOGO Avocats"
 meta-desc: "HOGO est une société d’avocats exclusivement dédiée à l’accompagnement des entreprises & associations en droit du travail et droit de la sécurité sociale."
+
+plugins: [jekyll-paginate-v2]
+# Pagination Settings
+pagination:
+  enabled: true
+  collection: 'posts'
+  per_page: 8
+  permalink: '/page:num/'
+  title: ':title - page :num of :max'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+
+plugins_dir:
+  - jekyll-paginate-v2
